# IDE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  TODO_List.txt  build.bat  build.sh
src/: main.cpp
src/Application/: IDE.cpp  IDE.h
src/Core/: Core.cpp  Core.h  CoreEngine.cpp  CoreEngine.h
src/Core/ComponentSystem/: ComponentType.h  Context.h
src/Core/ComponentSystem/ComponentManager/: ComponentManager.cpp  ComponentManager.h
src/Core/ComponentSystem/Components/: IComponent.h
src/Core/ComponentSystem/Components/TextBuffer/: Cursor.h  TextBuffer.cpp  TextBuffer.h
src/Core/Constants/: Keymap.h  Keymapping.cpp
src/Core/EventSystem/: IEventListener.h
src/Core/EventSystem/EventManager/: EventManager.cpp  EventManager.h
src/Core/EventSystem/Events/: EmptyEvent.h  Event.h  EventType.h  KeyboardEvent.h  MouseEvent.h  ResizeEvent.h
src/Core/EventSystem/Events/ComponentEvents/: ComponentEvent.h
src/Core/EventSystem/Events/TextEvents/: CreateTextboxEvent.h  SingleLineUpdateEvent.h
src/Core/EventSystem/ThreadSafeQueue/: ThreadSafeQueue.h
src/Core/KeybindingSystem/KeybindingManager/: KeybindingManager.h
src/Core/ServiceManagement/: IService.h  ServiceManager.h
src/Core/UiResources/Containers/: Color.h
src/Core/UiResources/Datastructures/OffsetVector/: OffsetVector.cpp  OffsetVector.h
src/Core/UiResources/Font/: IFontRenderer.h
src/Core/UiResources/Font/FontManager/: FontManager.cpp  FontManager.h
src/Core/docs/: Components.md  EventCircle.md
src/UI/: ComponentManager.cpp  IWidget.h
src/UI/EventSystem/: EventManager.cpp  EventManager.h
src/UI/Interfaces/: IInputListener.h
src/UI/Renderer/FontRenderer/: Color.h  FontRenderer.cpp  FontRenderer.h
src/UI/Textbox/: Textbox.cpp  Textbox.h
src/UI/Toolbar/: Toolbar.cpp  Toolbar.h
src/UI/Window/: OpenGLWindow.cpp  OpenGLWindow.h
src/Ui/: ComponentManager.cpp  ComponentManager.h
src/Ui/Constants/: Keymap.h
src/Ui/EventSystem/: Event.h  EventTypes.h  KeyboardEvent.h  ResizeEvent.h
src/Ui/Renderer/FontRenderer/: Character.h  FontRenderer.cpp  FontRenderer.h
src/Ui/Widgets/: Widget.h
src/Ui/Widgets/Textbox/: Textbox.cpp  Textbox.h
src/Ui/Window/: OpenGLWindow.cpp  OpenGLWindow.h
